Add poky submodule on kirkstone branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,5 @@
 	path = assignment-autotest
 	url = https://github.com/cu-ecen-aeld/assignment-autotest.git
 [submodule "poky"]
+	path = poky
+	url = git://git.yoctoproject.org/poky
